home text align fixed

--- a/style.css
+++ b/style.css
@@ -390,11 +390,12 @@ p {
 
   .home__container {
     text-align: center;
-    align-items: flex-start;
-    justify-content: center;
-    margin-top: 4rem;
   }
 
+  .home__text {
+    justify-content: center;
+    margin: 0 auto;
+  }
   .home__title {
     line-height: 3.25rem;
     margin-top: 2rem;
@@ -415,6 +416,7 @@ p {
     margin: auto;
     max-width: 600px;
     z-index: 0;
+    justify-content: center;
   }
 }
 
